# engine

./: .gitignore  APPENDIX_E_GANARDI.md  APPENDIX_F_GENERALIZATION.md  APPENDIX_G_HARDWARE_ROADMAP.md  BENCHMARK_PLAN.md  BENCHMARK_REPORT.md  Cargo.toml  PAPER.md  PAPER_APPENDIX_D.md  PAPER_EML_TSLP_COMPRESSION.md  PLAN_IMPLEMENTACJI_EML_TSLP.md  README.md  RECOVERY_PLAN.md  bundle.sh  bundle_code.sh  code_index.md  current_changes.diff  day_8_summary.md  eml_code_bundle_2026-05-01_2.txt  final_session_diff.txt  full_staged_diff.txt  implementation_plan.md  inspect_gguf.py  repetitive.eml  results_standard.txt  results_unified.txt  results_unified_v3.txt  results_unified_v4.txt  stabilization_suite.tests  staged_changes_diff.txt  staged_changes_v3.txt  task.md  test.eml  test.txt  test_gguf2.rs
benches/: compress_bench.rs  naga_bench.rs  proc_macro_bench.rs  real_tinyllama.rs  tinyllama_ops.rs  trs_performance.rs  tslp_bench.rs  verify_output.rs  vulkan_benchmark.rs
eml-trs/: Cargo.toml  PAPER.md  README.md  bundle.sh  summary.md  test_gguf.rs
eml-trs-macro/: Cargo.toml
eml-trs-macro/src/: lib.rs
eml-trs/benches/: real_tinyllama.rs  trs_performance.rs  vulkan_benchmark.rs
eml-trs/paper/results/: real_tinyllama.csv  vulkan_benchmark.csv
eml-trs/research/: TinyLlama EML Forward Pass Optimization.md
eml-trs/src/: asis.rs  ast.rs  constant_fold.rs  cost_model.rs  dag.rs  lib.rs  nn_layer.rs  polar.rs  trs.rs
eml-trs/src/backends/: eml_kernels.wgsl  vulkan_eml.rs  wgsl.rs
eml-trs/src/loader/: gguf.rs
paper/results/: tinyllama_costs.csv  tinyllama_optimized.csv  tslp_balanced_depth.csv  tslp_depth_analysis.csv  vulkan_benchmark.csv
research/: day_1-2_summary.md  day_3-5_summary.md  day_6-7_summary.md
rtl/: eml_cell.v  eml_dot_product_64.v  eml_log_softmax.v
scratch/: check_reduction.rs
scripts/: eml_ptq.py  extract_layer0.py  extract_weights.py  gguf_to_eml.py  onnx_to_eml.py  verify_bf16.py  verify_minimax.py  verify_parity.py
src/: asis.rs  ast.rs  constant_fold.rs  cost_model.rs  dag.rs  dag_mmap.rs  fusions.rs  lib.rs  nn_layer.rs  round_trip.rs  trs.rs  x.md
src/backends/: alu.rs  eml_kernels.wgsl  mod.rs  naga_eml.rs  vulkan_eml.rs
src/compress/: decompress.rs  json_loader.rs  lift.rs  mod.rs  serial.rs
src/loader/: gguf.rs
src/tslp/: depth.rs  executor.rs  ganardi.rs  grammar.rs  mod.rs  parallel_prefix.rs  rake_compress.rs  scheduler.rs
tb/: tb_eml_cell.v
vulkan/: eml_dot_product.comp  eml_lib.glsl
