[package]
name = "eml-trs"
version = "0.1.0"
edition = "2021"
description = "EML Term Rewriting System for neural network compression"
authors = ["Sławek Majcher"]

[workspace]
members = [".", "eml-trs-macro"]

[dependencies]
wgpu = "0.20"
bytemuck = { version = "1.16", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
naga = { version = "0.20", optional = true, features = ["wgsl-in", "spv-out"] }
eml-trs-macro = { path = "eml-trs-macro" }
flate2 = "1.0"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]

[features]
default = []
naga-pass = ["naga"]

# --- Binaries (src/bin/) ---

[[bin]]
name = "eml_compress"
path = "src/bin/eml_compress.rs"

[[bin]]
name = "eml_parity"
path = "src/bin/eml_parity.rs"

[[bin]]
name = "eml_benchmark"
path = "src/bin/eml_benchmark.rs"

# --- Benches (benches/) ---
# Each bench file appears ONLY as [[bench]], not as [[bin]], to avoid duplicate target warnings.

[[bench]]
name = "tinyllama_ops"
path = "benches/tinyllama_ops.rs"
harness = false

[[bench]]
name = "verify_output"
path = "benches/verify_output.rs"
harness = false

[[bench]]
name = "trs_performance"
path = "benches/trs_performance.rs"
harness = false

[[bench]]
name = "tslp_bench"
path = "benches/tslp_bench.rs"
harness = false

[[bench]]
name = "compress_bench"
path = "benches/compress_bench.rs"
harness = false

[[bench]]
name = "naga_bench"
path = "benches/naga_bench.rs"
harness = false
required-features = ["naga-pass"]

[[bench]]
name = "proc_macro_bench"
path = "benches/proc_macro_bench.rs"
harness = false

[[bench]]
name = "vulkan_benchmark"
path = "benches/vulkan_benchmark.rs"
harness = false

[profile.release]
opt-level = 3
[profile.dev]
opt-level = 1
